--- a/team1.html
+++ b/team1.html
@@ -28,7 +28,7 @@
 							<ul class="nav masthead-nav">
 								<li><a href="index1.html">Home</a></li>
 								<li><a href="description1.html">Description</a></li>
-								<li><a href="data.html">Data</a></li>
+								<li><a href="data1.html">Data</a></li>
 								<li class='active'><a href="team1.html">Team</a></li>
 							</ul>
 						</nav>
