--- a/description1.html
+++ b/description1.html
@@ -26,44 +26,72 @@
 						<h3 class="masthead-brand">Between Countries and Cinema</h3>
 						<nav>
 							<ul class="nav masthead-nav">
-								<li><a href="index.html">Home</a></li>
-								<li class='active'><a href="description.html">Description</a></li>
-								<li><a href="data.html">Data</a></li>
-								<li><a href="team.html">Team</a></li>
+								<li><a href="index1.html">Home</a></li>
+								<li class='active'><a href="description1.html">Description</a></li>
+								<li><a href="data1.html">Data</a></li>
+								<li><a href="team1.html">Team</a></li>
 							</ul>
 						</nav>
 					</div>
 				</div>
 
 				<div class="inner">
-					<h4 class="cover-heading">Introduction</h4>
+					<h3>Through a cinema perspective, we aspire to analyse general movies trends
+						over time and by
+						country.</h3>
 					<p>
-						This visualization unveils the deepest mysteries of our world,
-						showing the facts through the lens of statistical data anlysis
-						and colorful animations.
-						The truth shines brightly and guides the lost minds.
+						Our project will take the form of a main visualization (sketch 1) around which the user will be
+						able to ask several questions.
+						With our visualization, we will show the distribution of the country of production of the film
+						awarded with the most famous ceremonies throughout time. It is an attempt to capture by country
+						a certain trend of cinematographic interest of its population, these productions and then their
+						international renown over a century.
+						Today there are many film awards and, from the point of view of countries, the fact that a film
+						is awarded or nominated increases the country's international influence. Obtaining an award
+						widens the audience, leading to a better knowledge of a specific country or the desire to
+						discover it. An award is of course a considerable price for directors, actors, actresses and all
+						the team involved but also for the country who hosts it. <br />
 					</p>
 					<p>
-						We investigate the changes in population of alligators in Lac Léman
-						over the last century and extrapolate the trend to predict
-						a world of reptile domination.
-						Read more <a href="description.html">about our model</a>
-						or the <a href="data.html">sources of our data</a>.
+						Ireland and Croatia are examples of those countries that have seen their tourists number explode
+						thanks to the famous “Game of Thrones” series. New Zealand recorded a 40% increase in tourism
+						between 2000 and 2006 with his “Lord of the Rings”, notably the town of Hobbiton. Moreover
+						Kazakhstan just after “Borat” with a 300% increase in tourism. There is also Marseille in France
+						with “Plus Belle la Vie”, Miami in USA with “Dexter”, Albuquerque with “Breaking Bad”, Tunisia
+						with “Stars Wars” and many others.<br />
 					</p>
-
-					<h4 class="cover-heading">How to use</h4>
 					<p>
-						Here we would tell you how to interact with the plot below.
-						Sadly, it is not interactive at this stage of the project.
-						Please imagine that the plot is interactive and that clicking on it
-						activates captivating animations.
+						So who are theses countries that observe new tourism trends from cinematographic recompenses?
+						How do they evolve over time?<br />
+					</p>
+					<p>
+						The available datasets do not allow us to illustrate the correlation between the tourist
+						development of a country and the cinematic rewards received. Tourism is here only an additional
+						motivation for our project: visualizing the link between the countries of production and the
+						rewards received by the films produced.<br />
+						To this link between country and film ceremony we have added the dimensionality of film
+						categories. By doing so, we would like to observe with a timeline if a film-producing country is
+						gradually changing the type of film it hosts in order to have better audiences. Since many
+						awards are based on public audiences or are followed by a general improvement in public interest
+						in the film, we can assume that the proportion of films nominated in the categories through
+						ceremonies influences the current film trends of the population. A blockbuster will be screened
+						worldwide and therefore contributes to increase the appeal of a particular genre. This is even
+						more convincing for series, as many countries begin to debate and watch the same world series
+						for a period of time. “Game of Thrones” can be again a good example of this correlation between
+						awards and audience as they have 16.1M of spectator 38 Emmy Awards and 129 nominations.
+						If such a correlation is confirmed, which ceremonies are targeted? In fact, we can imagine that
+						some categories will have greater chance of being nominated at specific ceremonies (depending on
+						the award category) but is it true? Our main visualisation will show the distribution of film
+						categories through ceremonies or countries over time.
 					</p>
 				</div>
 				<div class="inner">
-					<h4>Credits</h4>
-					<p>Meet <a href="./team.html">the authors here</a>. The project was created for the <a
-							href="http://edu.epfl.ch/coursebook/en/data-visualization-COM-480">Data Visualization</a>
-						course at EPFL.
+					<h3>Its purpose?</h3>
+					<p>Could be a new tool for trends analysis by considering film prices as country
+						indicators. It can help the director to better choose where to present his film according to
+						its
+						category and home production. Moreover, it can be a simple curiosity for a cinema-lover or
+						anybody looking for new visualisation of the world of film awards.</p>
 				</div>
 
 				<div class="mastfoot">
