--- a/index1.html
+++ b/index1.html
@@ -31,43 +31,54 @@
 							<ul class="nav masthead-nav">
 								<li class='active'><a href="index1.html">Home</a></li>
 								<li><a href="description1.html">Description</a></li>
-								<li><a href="data.html">Data</a></li>
-								<li><a href="team.html">Team</a></li>
+								<li><a href="data1.html">Data</a></li>
+								<li><a href="team1.html">Team</a></li>
 							</ul>
 						</nav>
 					</div>
 				</div>
+				<div class='inner'>
+					<h4>Introduction</h4>
+					When the Oscar ceremony become questionnable, what can we learn from Cinema?
+					This work is an attempt to illustrate and ask multiple question about cinema,
+					culture, tendance in general.
+					From a serie of datasets, we manage to ask collected data about tacit rules
+					that are often kept deeply into our mind.
+				</div>
 
-				<div class="inner cover">
+				<div class="visu">
+					<!-- EXEMPLE SVG 
 					<svg id="countries_cat_viz" width="600" height="500"></svg>
+					-->
+					<img src="sketch0.jpg">
 
 				</div>
+				<div class='inner'>
+					<div class="card-deck">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">Question 1</h5>
+								<p class="card-text">Explication</p>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">Question 2</h5>
+								<p class="card-text">Explication</p>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">Question 3</h5>
+								<p class="card-text">Explication</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
 
 				<div class="jumbotron jumbotron-fluid">
 					<div class="container">
-						<h4>Introduction</h4>
-						<p>
-							When the Oscar ceremony become questionnable, what can we learn from Cinema?
-							This work is an attempt to illustrate and ask multiple question about cinema,
-							culture, tendance in general.
-							From a serie of datasets, we manage to ask collected data about tacit rules
-							that are often kept deeply into our mind.
-
-						</p>
-						<p>
-							Let show how Oscar title can be predictible. Let show how actor will be reduced
-							to certain role by their social condition or even more their birth.
-
-							Our datasets have been collected from the platform Kaggle.
-
-							Read more <a href="https://www.kaggle.com/iwooloowi/film-awards-imdb">about our IMDB
-								award
-								datasets</a>
-							or the <a href="data.html">sources of our data</a>.
-
-							Both datasets have been updated less than 2 months ago.
-						</p>
-
 						<h4>How to use</h4>
 						<p>
 							Here we would tell you how to interact with the plot below.
