--- a/index.html
+++ b/index.html
@@ -182,6 +182,16 @@
 					<div class="scroll-indicator" id="exploratory" data-scroll-indicator-title="Exploratory"></div>
 				</div>
 				<h3 class='parties'>Exploratory -Evolution of genres and awards in a specific country</h3>
+				<h5>Main goal</h5>
+				<p>
+					The section aims to correlate the films produced by country according to their genre and the awards
+					received over time.
+					</br>
+					<i>Has a country been able to change the type of film it produces in order to have a better
+						cinematic
+						impact?</i>
+				</p>
+
 
 				<form class="need-validation" novalidate>
 					<label for='country_selection'>Choose a country </label>
@@ -191,11 +201,14 @@
 
 					</select>
 				</form>
-				<svg id="stackedArea" class="visu1" width="500" height="500" viewBox='0 0 500 500'></svg>
-				<svg id="stackedAreaAwards" class="visu2" width="500" height="500" viewBox='0 0 500 500'></svg>
+				<svg id="stackedArea" class="visu1" width="500" height="500" viewBox='0 0 500 350'></svg>
+				<svg id="stackedAreaAwards" class="visu2" width="500" height="500" viewBox='0 0 500 350'></svg>
 
-				<img width=700px height=auto src="./Preprocess/figures/exploration.PNG">
-
+				<h5>How to use</h5>
+				<p>
+					You can put your mouse on any genre or type of award to highlight the corresponding evolution.
+					You can zoom in each graph by dragging a selecting box to extend the desired zone.
+				</p>
 
 
 				<!--Anchor point (scroll indicator-->
