ratio bouton + corrected date

--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
 						<option value="" selected> All</option>
 
 					</select>
+
+					<label><input type="radio" name="mode" value="bycount" checked> By number of films</label>
+					<label><input type="radio" name="mode" value="bypercent"> By proportion</label>
 				</form>
 				<svg id="stackedArea" class="visu1" width="500" height="500" viewBox='0 0 500 350'></svg>
 				<svg id="stackedAreaAwards" class="visu2" width="500" height="500" viewBox='0 0 500 350'></svg>
@@ -207,7 +210,10 @@
 				<h5>How to use</h5>
 				<p>
 					You can put your mouse on any genre or type of award to highlight the corresponding evolution.
-					You can zoom in each graph by dragging a selecting box to extend the desired zone.
+					<br />
+					You can zoom in each graph by dragging a selecting box to extend the desired zone. <br />
+					You can choose how you want to visualize the data : by proportion or with the corresponding number
+					of film produced.
 				</p>
 
 
