New design + story explanatory

--- a/index.html
+++ b/index.html
@@ -188,9 +188,45 @@
 					received over time.
 					</br>
 					<i>Has a country been able to change the type of film it produces in order to have a better
-						cinematic
-						impact?</i>
+						cinematic impact?</i>
+
 				</p>
+
+				<div class="card">
+					<div class="card-body">
+						<h3 class="card-title">Pic of history impact in Iraq</h3>
+						<p class="card-text">Observe a pic of an historical film production around 2011
+							-2012, only time this kind of film was produced and primed.
+							The corresponding film is Bahman Ghobadi's 'Fasle kargadan', a big success film with 6 wins
+							and 6 nominations in
+							Asian Film Awards(2013), Chicago International Film Festival (2012), Tallinn Back Nights
+							Film Festival (2012). <br />
+							Marker of an intellectual revolution at work in Iraq through cinema.
+						</p>
+					</div>
+					<div class="card-body">
+						<h3 class="card-title">Strong diversity in France</h3>
+						<p class="card-text">
+							It can be noted that France produces almost all possible genres and each of these genres
+							follow the same evolution, with the renown in agreement. <br\>
+								More films, more renown. We can therefore deduce that in addition to being a major film
+								producer, the films are of high quality.
+						</p>
+					</div>
+					<div class="card-body">
+						<h3 class="card-title">Comedia in Russia</h3>
+						<p class="card-text">
+							We can observe that comedy is a very widespread genre in the films produced (click on By
+							proportion)
+							Soviet comedy films are part of the world's film heritage.
+							Russia, with its history marked by tragic episodes, has been able to place humour at the
+							heart of its traditional and here Soviet film culture.
+						</p>
+					</div>
+				</div>
+				</p>
+				</p>
+
 
 
 				<form class="need-validation" novalidate>
@@ -204,9 +240,10 @@
 					<label><input type="radio" name="mode" value="bycount" checked> By number of films</label>
 					<label><input type="radio" name="mode" value="bypercent"> By proportion</label>
 				</form>
-				<svg id="stackedArea" class="visu1" width="500" height="500" viewBox='0 0 500 350'></svg>
-				<svg id="stackedAreaAwards" class="visu2" width="500" height="500" viewBox='0 0 500 350'></svg>
-
+				<div class="visu">
+					<svg id="stackedArea" class="visu1" width="500" height="500" viewBox='0 0 500 350'></svg>
+					<svg id="stackedAreaAwards" class="visu2" width="500" height="500" viewBox='0 0 500 350'></svg>
+				</div>
 				<h5>How to use</h5>
 				<p>
 					You can put your mouse on any genre or type of award to highlight the corresponding evolution.
@@ -230,9 +267,6 @@
 					</p>
 				</div>
 				<div class="visu">
-					<!-- EXEMPLE SVG
-					<svg id="countries_cat_viz" width="600" height="500"></svg>
-					-->
 					<img width=700px height=auto src="./Preprocess/figures/resume.PNG">
 
 				</div>
