--- a/index.html
+++ b/index.html
@@ -1,275 +1,138 @@
+
+
 <!DOCTYPE html>
-<html lang="en">
+<meta charset="utf-8">
+<title>Parallel Sets</title>
+<style>
+@import url(http://www.jasondavies.com/parallel-sets/d3.parsets.css);
 
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>What can we learn from Cinema?</title>
-	<meta name="description" content="Oscar Visualization">
-	<meta name="author" content="Gonxhe Idrizi, Yann Bouquet, Emma Lanctuit">
+body {
+  font-family: sans-serif;
+  font-size: 16px;
+  width: 960px;
+  margin: 1em auto;
+  position: relative;
+}
+h1, h2, .dimension text {
+  text-align: center;
+  font-family: "PT Sans", Helvetica;
+  font-weight: 300;
+}
+h1 {
+  font-size: 4em;
+  margin: .5em 0 0 0;
+}
+h2 {
+  font-size: 2em;
+  margin: 1em 0 0.5em;
+  border-bottom: solid #ccc 1px;
+}
+p.meta, p.footer {
+  font-size: 13px;
+  color: #333;
+}
+p.meta {
+  text-align: center;
+}
 
-	<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-	<link href="cover.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="easyScrollDots.min.css" />
+.options { font-size: 12px; text-align: center; padding: 5px 0; }
+.curves { float: left; }
+.source { float: right; }
+pre, code { font-family: "Menlo", monospace; }
 
-</head>
+.html .value,
+.javascript .string,
+.javascript .regexp {
+  color: #756bb1;
+}
+
+.html .tag,
+.css .tag,
+.javascript .keyword {
+  color: #3182bd;
+}
+
+.comment {
+  color: #636363;
+}
+
+.html .doctype,
+.javascript .number {
+  color: #31a354;
+}
+
+.html .attribute,
+.css .attribute,
+.javascript .class,
+.javascript .special {
+  color: #e6550d;
+}
+</style>
 
 <body>
+<div id="vis"><noscript><img src="parsets.png"></noscript></div>
+<script src="https://mbostock.github.com/d3/d3.js?2.5.0"></script>
+<script src="https://www.jasondavies.com/parallel-sets/d3.parsets.js"></script>
+<script src="https://www.jasondavies.com/parallel-sets/highlight.min.js"></script>
+<script>
+var chart = d3.parsets()
+    .dimensions(["country", "genre", "isWinner"])
+		.tension(0.5);
 
-	<div class="site-wrapper">
+var vis = d3.select("#vis").append("svg")
+    .attr("width", chart.width())
+    .attr("height", chart.height());
 
-		<div class="site-wrapper-inner">
+var partition = d3.layout.partition()
+    .sort(null)
+    .size([chart.width(), chart.height() * 5 / 4])
+    .children(function(d) { return d.children ? d3.values(d.children) : null; })
+    .value(function(d) { return d.count; });
 
-			<div class="cover-container">
+d3.csv("5_genres_countries.csv", function(csv) {
+  vis.datum(csv).call(chart);
+  var tension = chart.tension();
+    var dimensions = [];
+    vis.selectAll("g.dimension")
+       .each(function(d) { dimensions.push(d); });
+    dimensions.sort(function(a, b) { return a.y - b.y; });
+    var root = d3.parsets.tree({children: {}}, csv, dimensions.map(function(d) { return d.name; }), function() { return 1; }),
+        nodes = partition(root),
+        nodesByPath = {};
+    var data = [];
+});
 
-				<div class="masthead clearfix">
-					<div class="inner">
-						<h3 class="masthead-brand">What can we learn from Cinema?</h3>
-						<nav>
-							<ul class="nav masthead-nav">
-								<li class='active'><a href="index.html">Home</a></li>
-								<li><a href="description.html">Description</a></li>
-								<li><a href="data.html">Data</a></li>
-								<li><a href="team.html">Team</a></li>
-							</ul>
-						</nav>
-					</div>
-				</div>
-				<!--Anchor point (scroll indicator-->
-				<div>
-					<div class="scroll-indicator" id="presentation" data-scroll-indicator-title="Context"></div>
-				</div>
-				<h3 class="parties">Context- Which countries are represented in which
-					film ceremonies over time </h3>
-				<div class='inner'>
-					<h4>Introduction</h4>
-					When the Oscar ceremony become questionnable, what can we learn from Cinema?
-					This work is an attempt to illustrate and ask multiple question about cinema,
-					culture, tendance in general.
-					From a serie of datasets, we manage to ask collected data about tacit rules
-					that are often kept deeply into our mind.
-				</div>
-				<div class="jumbotron jumbotron-fluid">
-					<div class="container">
-						<h4>What are the core visualization presented here</h4>
-						<h5>The Network</h5>
-						<p>
-							The network implemented here represents the country involved in the main film award events
-							in 2019. The blue nodes
-							represent the events, the orange one represent the countries. A contry is involved in an
-							event if at least one
-							film produced in this country is nominated in the event.
-						</p>
-						<h6>Interaction</h6>
-						<p>
-							You can drag any node you want. You can isolate the node of group (countries or event) next
-							to the other group to
-							ease the readibility of connections. For example, take a blue node, if you place it to the
-							right of the orange nodes,
-							it will keep its place, otherwise it will return to its original x-coordinate. The same idea
-							goes with an orange node.
-							A force exists between the nodes, so that they won't cover each other up.
-						</p>
-						<h6>Further Ideas</h6>
-						<p>
-							We want to bring text and legends in the visualization so that those explanation won't be
-							necessary anymore.
-							Also we aim to bring a timeline so that this example of 2019 can be extended to any year
-							that offers data in our datasets.
-							Also, we want the user to be able to click on an event to display a sequence sunburst
-							detailing what that event was in the
-							considered year.
-						</p>
-						<h5>The Sequence Sunburst</h5>
-						<p>
-							It represents the awards repartition (Oscar), the winners and nominees repartition, the
-							films/people repartition, and give
-							all the awards category repartition for the Academy Awards in 2019.
-						</p>
-						<h6>Interaction</h6>
-						<p>
-							You can put your mouse on any partition of the sequence and the latter would appear in
-							detail above the rings.
-						</p>
-						<h6>Further Ideas</h6>
-						<p>
-							The sunburst would appear and be updated according to the interaction the user woudl have
-							with the network as explained above :
-							clicking on a node representing an event. It would also be linked to the timeline of the
-							network so that an update of the
-							partitions would be triggered according to the new targeted year.
-						</p>
-					</div>
-				</div>
-				<div class="visu">
-					<div id="graph-div>
-						<svg id=" undirected_graph" viewBox='0 -10 900 920'></svg>
-					</div>
+// Given a text function and width function, truncates the text if necessary to
+// fit within the given width.
+function truncateText(text, width) {
+  return function(d, i) {
+    var t = this.textContent = text(d, i),
+        w = width(d, i);
+    if (this.getComputedTextLength() < w) return t;
+    this.textContent = "…" + t;
+    var lo = 0,
+        hi = t.length + 1,
+        x;
+    while (lo < hi) {
+      var mid = lo + hi >> 1;
+      if ((x = this.getSubStringLength(0, mid)) < w) lo = mid + 1;
+      else hi = mid;
+    }
+    return lo > 1 ? t.substr(0, lo - 2) + "…" : "";
+  };
+}
 
-					<div id="sunburst" , style="display:inline-block;">
-						<div id="sequence"></div>
-						<div id="chart">
-							<div id="explanation" style="visibility: hidden;">
-								<span id="percentage"></span><br />
-								of visits begin with this sequence of pages
-							</div>
-						</div>
-					</div>
-					<div id="sidebar">
-						<input type="checkbox" id="togglelegend"> Legend<br />
-						<div id="legend" style="visibility: hidden;"></div>
-					</div>
+d3.select("#file").then(function() {
+  var file = this.files[0],
+      reader = new FileReader;
+  reader.onloadend = function() {
+    var csv = d3.csv.parse(reader.result);
+    vis.datum(csv).call(chart
+        .dimensions(function(d) { return d3.keys(d[0]).sort(); }));
+  };
+  reader.readAsText(file);
+});
 
-					<!-- EXEMPLE SVG
-					<svg id="countries_cat_viz" width="600" height="500"></svg>
-					<img width=700px height=auto src="./Preprocess/figures/context.PNG">-->
-
-				</div>
-
-				<!--Essai
-				<table>
-					<tr>
-						<td>
-							Network
-						</td>
-						<td>
-							Sunburst
-						</td>
-					</tr>
-					<tr>
-						<td>
-							Intro
-						</td>
-						<td>
-							Intro
-						</td>
-					</tr>
-					<tr>
-						<td>
-							Interaction
-						</td>
-						<td>
-							Interaction
-						</td>
-					</tr>
-					<tr>
-						<td>
-							Visualisation
-							<div id="graph-div">
-								<svg id="undirected_graph" viewBox='0 -10 900 920'></svg>
-							</div>
-						</td>
-						<td>
-							VISU
-						</td>
-					</tr>
-					<tr>
-						<td>
-							Further ideas
-						</td>
-						<td>
-							Further ideas
-						</td>
-					</tr>
-
-				</table>
-
--->
-				<!--Anchor point (scroll indicator-->
-				<div>
-					<div class="scroll-indicator" id="exploratory" data-scroll-indicator-title="Exploratory"></div>
-				</div>
-				<h3 class='parties'>Exploratory -Evolution of genres and awards in a specific country</h3>
-				<h5>Main goal</h5>
-				<p>
-					The section aims to correlate the films produced by country according to their genre and the awards
-					received over time.
-					</br>
-					<i>Has a country been able to change the type of film it produces in order to have a better
-						cinematic
-						impact?</i>
-				</p>
-
-
-				<form class="need-validation" novalidate>
-					<label for='country_selection'>Choose a country </label>
-					<select id='country_selection' class="mdb-select validate md-form" searchable="Search here..."
-						onchange="stackedAreabyCountry(this.value)">
-						<option value="" selected> All</option>
-
-					</select>
-				</form>
-				<svg id="stackedArea" class="visu1" width="500" height="500" viewBox='0 0 500 350'></svg>
-				<svg id="stackedAreaAwards" class="visu2" width="500" height="500" viewBox='0 0 500 350'></svg>
-
-				<h5>How to use</h5>
-				<p>
-					You can put your mouse on any genre or type of award to highlight the corresponding evolution.
-					You can zoom in each graph by dragging a selecting box to extend the desired zone.
-				</p>
-
-
-				<!--Anchor point (scroll indicator-->
-				<div>
-					<div class="scroll-indicator" id="resume" data-scroll-indicator-title="Conclusion"></div>
-				</div>
-				<h3 class='parties'>Conclusion- Overview of countries trends through cinema awards</h3>
-				<div class='inner'>
-					<p>
-						After a generalisation over all countries and awards, how evolve the repartition of countries
-						countries and film category produced by them evolved through time view from the number of
-						nomination/winners in prestigious film ceremonies.
-					</p>
-				</div>
-				<div class="visu">
-					<!-- EXEMPLE SVG
-					<svg id="countries_cat_viz" width="600" height="500"></svg>
-					-->
-					<img width=700px height=auto src="./Preprocess/figures/resume.PNG">
-
-				</div>
-
-				<div class="mastfoot">
-					<div class="inner">
-						<p>Data Visualisation project </p>
-					</div>
-				</div>
-
-			</div>
-
-		</div>
-
-	</div>
-
-	<!--<script src="map_visu.js"></script>-->
-	<script type="text/javascript" src="easyScrollDots.min.js"></script>
-	<script src="https://d3js.org/d3.v5.js"></script>
-	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-	<script src="https://d3js.org/d3-array.v2.min.js"></script>
-	<script src="undirected_graph.js"></script>
-	<script src="seq_sunburst.js"></script>
-	<script src="stackedArea.js"></script>
-	<!--Easy Scroll Dots js-->
-	<script>function dotsThrottle(a, b, c) { var d, e, f, g = null, h = 0; c || (c = {}); var i = function () { h = !1 === c.leading ? 0 : Date.now(), g = null, f = a.apply(d, e), g || (d = e = null) }; return function () { var j = Date.now(); h || !1 !== c.leading || (h = j); var k = b - (j - h); return d = this, e = arguments, 0 >= k || k > b ? (g && (clearTimeout(g), g = null), h = j, f = a.apply(d, e), !g && (d = e = null)) : !g && !1 !== c.trailing && (g = setTimeout(i, k)), f } } let dotFixedNavPresent = !1, dotFixedNavId = "", dotFixedNavUp = !1; function easyScrollDots(a) { let b = document.querySelectorAll(".scroll-indicator"); if (!0 === a.fixedNav ? dotFixedNavPresent = !0 : dotFixedNavPresent, dotFixedNavId = "" !== a.fixedNavId && a.fixedNavId, !0 === a.fixedNavUpward ? dotFixedNavUp = !0 : dotFixedNavUp, b.length) { document.querySelector("body").lastElementChild.insertAdjacentHTML("afterend", "<div class=\"scroll-indicator-controller\"><span></span></div>"); const a = document.querySelector(".scroll-indicator-controller"); ("undefined" != typeof window.orientation || -1 !== navigator.userAgent.indexOf("IEMobile")) && a.classList.add("indi-mobile"); const d = Array.prototype.slice.call(b); d.forEach(function (b, c) { const d = b.getAttribute("id"), e = b.getAttribute("data-scroll-indicator-title"); let f = ""; 0 == c && (f = "active"), a.lastElementChild.insertAdjacentHTML("afterend", "<div class=\"" + f + "\" data-indi-controller-id=\"" + d + "\" onclick=\"scrollIndiClicked('" + d + "');\"><span>" + e + "</span><div></div></div>") }); const f = a.querySelectorAll("[data-indi-controller-id]"); var c = dotsThrottle(function () { let b = {}; d.forEach(function (a) { const c = a.getAttribute("id"), d = a.getBoundingClientRect().top; b[c] = d }); const c = Object.keys(b).map(function (a) { return b[a] }), g = function () { const a = c.filter(function (a) { return -150 < a }); return Math.min.apply(null, a) }; Object.keys(b).forEach(function (c) { b[c] == g() && (Array.prototype.forEach.call(f, function (a) { a.classList.contains("active") && a.classList.remove("active") }), a.querySelector("[data-indi-controller-id=\"" + c + "\"]").classList.add("active")) }) }, 300); window.onscroll = function () { c() } } } function scrollIndiClicked(a) { if (window.jQuery) { if (!0 == dotFixedNavPresent && dotFixedNavId.length) { const b = document.getElementById(dotFixedNavId), c = b.clientHeight, d = $("html, body"), e = $("#" + a); if (!0 === dotFixedNavUp) { d.animate({ scrollTop: e.offset().top }, 700); const a = document.body.getBoundingClientRect().top; setTimeout(function () { document.body.getBoundingClientRect().top > a && d.animate({ scrollTop: e.offset().top - c }, 400) }, 400) } else d.animate({ scrollTop: e.offset().top - c }, 700) } else $("html, body").animate({ scrollTop: $("#" + a).offset().top }, 700); } else if (!0 == dotFixedNavPresent && dotFixedNavId.length) { const b = document.getElementById(dotFixedNavId), c = b.clientHeight, d = document.getElementById(a); if (!0 === dotFixedNavUp) { window.scrollTo({ top: d.offsetTop, left: 0, behavior: "smooth" }); const a = document.body.getBoundingClientRect().top; setTimeout(function () { document.body.getBoundingClientRect().top > a && window.scrollTo({ top: d.offsetTop - c, left: 0, behavior: "smooth" }) }, 400) } else window.scrollTo({ top: d.offsetTop - c, left: 0, behavior: "smooth" }) } else window.scrollTo({ top: document.getElementById(a).offsetTop, left: 0, behavior: "smooth" }) }</script>
-	<!--Easy Scroll Dots init-->
-	<script>
-		easyScrollDots({
-			'fixedNav': true,
-			'fixedNavId': '',
-			'fixedNavUpward': false
-		});
-	</script>
-	<!-- Bootstrap core JavaScript
-    ================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-	<script src="../../dist/js/bootstrap.min.js"></script>
-	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-</body>
-
+</script>
+  </body>
 </html>
