--- a/team.html
+++ b/team.html
@@ -9,6 +9,8 @@
 	<meta name="description" content="Oscar Visualization">
 	<meta name="author" content="Gonxhe Idrizi, Yann Bouquet, Emma Lanctuit">
 
+	<link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 	<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 	<link href="cover.css" rel="stylesheet">
