--- a/description.html
+++ b/description.html
@@ -27,7 +27,7 @@
 			<div class="cover-container">
 				<div class="masthead clearfix">
 					<div class="inner">
-						<h3 class="masthead-brand">Between Countries and Cinema</h3>
+						<h3 class="masthead-brand">What can we learn from Cinema?</h3>
 						<nav>
 							<ul class="nav masthead-nav">
 								<li><a href="index.html">Home</a></li>
