--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@
 			<div class="cover-container">
 				<div class="masthead clearfix">
 					<div class="inner">
-						<h3 class="masthead-brand">Between Countries and Cinema</h3>
+						<h3 class="masthead-brand">What can we learn from Cinema?</h3>
 						<nav>
 							<ul class="nav masthead-nav">
 								<li><a href="index.html">Home</a></li>
@@ -66,8 +66,8 @@
 				<div class="card-deck">
 					<div class="card">
 						<div class="card-body">
-							<h5 class="card-title">Gonxhe Idrizi<h5>
-									<p class="card-text">Master DataScience</p>
+							<h5 class="card-title">Gonxhe Idrizi</h5>
+							<p class="card-text">Master DataScience</p>
 						</div>
 					</div>
 					<div class="card">
