centered parsets and corrected fonts

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 						nomination/winners in prestigious film ceremonies.
 					</p>
 				</div>
-				<div class="visu">
+				<div class="visu" style="text-align:center">
 					<div id="tab" class="tab">
 						<button class="rangeSets" onclick="change_range(1920)"> 1920-1930 </option>
 							<button class="rangeSets" onclick="change_range(1930)"> 1930-1940 </button>
