buttons for timeline corrected

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 							<button class="rangeSets" onclick="change_range(1940)"> 1940-1950 </button>
 							<button class="rangeSets" onclick="change_range(1950)"> 1950-1960 </button>
 							<button class="rangeSets" onclick="change_range(1960)"> 1960-1970 </button>
-							<button class="rangeSets active" onclick="change_range(1970)"> 1970-1980 </button>
+							<button class="rangeSets" onclick="change_range(1970)"> 1970-1980 </button>
 							<button class="rangeSets" onclick="change_range(1980)"> 1980-1990 </button>
 							<button class="rangeSets" onclick="change_range(1990)"> 1990-2000 </button>
 							<button class="rangeSets" onclick="change_range(2000)"> 2000-2010 </button>
