changed footer and added text to parallel sets visualization

--- a/index.html
+++ b/index.html
@@ -212,12 +212,22 @@
 				<div>
 					<div class="scroll-indicator" id="resume" data-scroll-indicator-title="Conclusion"></div>
 				</div>
-				<h3 class='parties'>Conclusion- Overview of countries trends through cinema awards</h3>
+				<h3 class='parties'>Conclusion - Overview of countries' trends through cinema awards</h3>
 				<div class='inner'>
 					<p>
-						After a generalisation over all countries and awards, how evolve the repartition of countries
-						countries and film category produced by them evolved through time view from the number of
-						nomination/winners in prestigious film ceremonies.
+						After accumulating the general information with the two above visualizations, one may ask
+						himself how did the repartition of the countries, linked with the film genres, evolve
+						through time based on if the movie has been nominated or has won in the most prestigious
+						film ceremonies. What is the proportion of french drama movies that have won in the 60's? How many
+						comedy movies have been nominated these past 10 years in the USA?
+					</p>
+					<h5>How to use</h5>
+					<p>
+						You can explore the questions stated above as well as many others in the visualization presented just below.
+						You can first start by selecting some time range you want to explore by clicking on one of the many ranges in the timeline.
+						You can then hover on one colorful line to get more details about the proportion of movies sharing the attributes where the line goes through.
+						One is also able to change the order of the parallel planes by clicking and moving one attribute to another place
+						on the line it is on. This way, you are able to get many other insights that interest you.
 					</p>
 				</div>
 				<div class="visu" style="text-align:center">
@@ -240,7 +250,7 @@
 				</div>
 
 				<div class="mastfoot">
-					<div class="inner">
+					<div class="inner" style="position:relative; top:-20px;">
 						<p>Data Visualisation project </p>
 					</div>
 				</div>
